# object_detection_openvino

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
include/object_detection_openvino/: detectionObject.h  detectionObject.hpp  nodeletHelper.h  objectDetectionOpenvino.h  objectDetectionOpenvino.hpp  objectDetectionOpenvino_nodelet.h  objectDetectionVPU.h  objectDetectionVPU.hpp  openvino.h  openvino.hpp  yoloParams.h  yoloParams.hpp
launch/: default.launch.py  mobilenet_cpu.launch  mobilenet_cpu_astrastereo.launch  mobilenet_cpu_realsense.launch  mobilenet_myriad.launch  mobilenet_myriad_nodelet.launch  mobilenet_myriad_realsense.launch  mobilenet_myriad_realsense_nodelet.launch  object_detection_openvino.launch  object_detection_openvino_realsense.launch  yolo_cpu.launch  yolo_myriad.launch
models/: downloadYoloModels.sh
models/YoloV3/FP16/: frozen_yolo_v3.xml
models/frozen/: darknet.xml
models/mobilenet-ssd/FP16/: mobilenet-ssd.xml
models/tiny-YoloV3/FP16/: frozen_tiny_yolo_v3.xml
models/tiny-YoloV3/FP32/: frozen_tiny_yolo_v3.xml
models/yolo-tiny/: yolo-tiny.xml
msg/: BoundingBox.msg  BoundingBox3d.msg  BoundingBox3dArray.msg  BoundingBoxArray.msg  Detection2D.msg  Detection2DArray.msg  Detection3D.msg  Detection3DArray.msg
params/: default_params.yaml
src/: objectDetectionOpenvino.cpp  objectDetectionOpenvino_node.cpp  objectDetectionOpenvino_nodelet.cpp  objectDetectionVPU.cpp  objectDetectionVPU_node.cpp  objectDetectionVPU_nodelet.cpp  openvino.cpp
