<?xml version="1.0"?>
<package format="2">
	<name>object_detection_openvino</name>
	<version>3.0.0</version>
	<description>OpenVINO implementation of Darknet ROS (YoloV3) and Mobilenet-SSD networks to achieve realtime processing on x64 CPUs.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>boost</depend>
	<depend>roscpp</depend>
	<depend>nodelet</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>image_transport</depend>
	<depend>message_filters</depend>
	<depend>cv_bridge</depend>
	<depend>vision_msgs</depend>
	<depend>pcl_ros</depend>
	<depend>pcl_conversions</depend>
	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>
