<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>object_detection_openvino</name>
	<version>4.0.0</version>
	<description>OpenVINO implementation of Darknet ROS (YoloV3) and Mobilenet-SSD networks to achieve realtime processing on x64 CPUs.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<license>BSD</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>boost</depend>
	<depend>rclcpp</depend>
	<depend>tf2</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>image_transport</depend>
	<depend>message_filters</depend>
	<depend>visualization_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>vision_msgs</depend>
	<depend>pcl_ros</depend>
	<depend>pcl_conversions</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
